Project-1/vpc.tf
# Create a VPC
resource "aws_vpc" "vpc-1" {
cidr_block = "10.0.0.0/16"
tags = {
  "Name" = "vpc-1"
}
}
